// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyncButton actions should handleSync 1`] = `
Array [
  Array [
    Object {
      "payload": Object {},
      "type": "INVENTORY_SYNC_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "disconnectHosts": 0,
        "syncHosts": 1,
      },
      "type": "INVENTORY_SYNC_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": <Toast
            disconnectHosts={0}
            syncHosts={1}
          />,
          "sticky": true,
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`SyncButton actions should handleSync with custom error message 1`] = `
Array [
  Array [
    Object {
      "payload": Object {},
      "type": "INVENTORY_SYNC_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "error": "Server error!",
      },
      "type": "INVENTORY_SYNC_ERROR",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Custom error to display in a toast",
          "sticky": true,
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`SyncButton actions should handleSync with error message 1`] = `
Array [
  Array [
    Object {
      "payload": Object {},
      "type": "INVENTORY_SYNC_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "error": "Network error!",
      },
      "type": "INVENTORY_SYNC_ERROR",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Network error!",
          "sticky": true,
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;
